--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sawloih</string>
+    <string name="cd__clear">clear</string>
+    <string name="sev__hint_keyword">input keywords</string>
+    <string name="app_fullname">Zhuang-Chinese Dictionary</string>
 </resources>
