--- a/app/src/main/res/values-za/strings.xml
+++ b/app/src/main/res/values-za/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Sawloih</string>
     <string name="cd__clear">Muenj</string>
-    <string name="app_fullname">Sawloih Cuenh-Hanh</string>
+    <string name="app_fullname">Sawloih Cuengh-Gun</string>
     <string name="sev__hint_keyword">sawhaeuj kivod</string>
 </resources>
